interpreter-janeklang/tests/good/11_functionReturn_1.janek
int plus(int a, int b) {
    return a + b;
}

int main() {
    int result = plus(3, 4);
    print(result);
    return 0;
}
