interpreter-janeklang/tests/bad/06_wrongArgCount_1.janek
int skibidi(int a, int b){
    return 0;
}

int main(){
    skibidi(1, 2, 3);
}